--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "node": ">=18.x"
   },
   "dependencies": {
+    "@mui/material": "^7.3.2",
+    "@react-leaflet/core": "^3.0.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "connect-pg-simple": "^9.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-session": "^1.18.0",
+    "leaflet": "^1.9.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.4",
     "redux": "^4.1.2",
@@ -31,6 +35,7 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.20",
     "@vitejs/plugin-react": "^4.2.1",
     "nodemon": "^3.1.0",
     "vite": "^5.2.11",
