--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@mui/material": "^7.3.2",
     "@react-leaflet/core": "^2.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "connect-pg-simple": "^9.0.1",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.20",
+    "@types/pg": "^8.15.5",
     "@vitejs/plugin-react": "^4.2.1",
     "nodemon": "^3.1.0",
     "vite": "^5.2.11",
